--- a/jwebppy/src/main/resources/templates/error.html
+++ b/jwebppy/src/main/resources/templates/error.html
@@ -47,7 +47,7 @@
 <body>
 <div class="header">
 	<div class="logo-area">
-		<img class="logo-doosan" th:src="@{/portal/img/main/logo2.png}" alt="DOOSAN" /><img class="logo-doobizplus" th:src="@{/portal/img/doobizplus.png}" alt="DOOBIZ Plus" />
+		<img class="logo-doosan" th:src="@{/portal/img/logo/logo2.png}" alt="DOOSAN" /><img class="logo-doobizplus" th:src="@{/portal/img/logo/doobizplus.png}" alt="DOOBIZ Plus" />
 	</div>	
 	<div class="info-area">
 		<ul class="info-list">
