--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write2.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write2.html
@@ -31,7 +31,7 @@
 		<div class="dropzone-area-top"></div>
 		<div class="dropzone-body dropzone-click-zone">
 			<div class="dropzone-click-zone" style="height:20px"></div>
-			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/upload_file.png"/>
+			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/icon/upload_file.png"/>
 			<div class="dropzone-body-content dropzone-click-zone" th:text="#{HQP_T_HOW_TO_UPLOAD_SIMULATION}"></div>
 			<div class="dropzone-body-content dropzone-click-zone" th:text="#{HQP_T_ITEMS_COPY_PASTE}"></div>
 		</div>
@@ -1023,7 +1023,7 @@
 				else
 				{
 					$(this).attr({
-						"src": "/portal/img/common/noimage.png"
+						"src": "/portal/img/common/no-data.png"
 					})
 					.css("cursor", "default")
 					.off("error").off("click");
