--- a/jwebppy/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
+++ b/jwebppy/src/main/resources/static/portal/css/layout/iv/hq/parts/popup/basic.css
@@ -668,7 +668,7 @@ select.custom-ui{
 	border: 1px solid #ddd;
 	margin-right: 1px;
 	font-family: inherit;
-	background: url("/portal/img/arrow_down.png") no-repeat 95% 50%;
+	background: url("/portal/img/icon/arrow_down.png") no-repeat 95% 50%;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 	appearance: none;	
@@ -688,7 +688,7 @@ select::-ms-expand {
 	border-radius: 0px;
 	min-width: 24px;
 	vertical-align: top;
-	background-image: url('/portal/img/btn-popup.png');
+	background-image: url('/portal/img/icon/popup.png');
 	background-position: -4px -4px;
 }
 
@@ -703,7 +703,7 @@ select::-ms-expand {
 	border-radius: 0px;
 	min-width: 24px;
 	vertical-align: top;
-	background-image: url('/portal/img/btn-popup.png');
+	background-image: url('/portal/img/icon/popup.png');
 	background-position: -4px -4px;
 	position:absolute;
 }
