--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write.html
@@ -11,7 +11,7 @@
 		<div class="dropzone-area-top"></div>
 		<div class="dropzone-body dropzone-click-zone">
 			<div class="dropzone-click-zone" style="height:20px"></div>
-			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/upload_file.png"/>
+			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/icon/upload_file.png"/>
 			<div class="dropzone-body-content dropzone-click-zone" th:text="#{HQP_T_HOW_TO_UPLOAD_SIMULATION}"></div>
 			<div class="dropzone-body-content dropzone-click-zone" th:text="#{HQP_T_ITEMS_COPY_PASTE}"></div>
 		</div>
@@ -91,7 +91,7 @@
 			</tr>
 			<tr>
 				<th>
-					<div th:text="#{HQP_L_PO_NO}"></div><img src="/portal/img/icon_required.png" class="required" />
+					<div th:text="#{HQP_L_PO_NO}"></div><img src="/portal/img/icon/required.png" class="required" />
 				</th>
 				<td>
 					<div class="input-area">
