--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/export/order/create/write.html
@@ -10,9 +10,10 @@
 	<div class="dropzone-area">
 		<div class="dropzone-area-top"></div>
 		<div class="dropzone-body dropzone-click-zone">
-			<div class="dropzone-click-zone" style="height:40.5px"></div>
-			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/upload_file.png"/>
+			<div class="dropzone-click-zone" style="height:20px"></div>
+			<img class="dropzone-body-img dropzone-click-zone" src="/portal/img/icon/upload_file.png"/>
 			<div class="dropzone-body-content dropzone-click-zone" th:text="#{HQP_T_HOW_TO_UPLOAD_SIMULATION}"></div>
+			<div class="dropzone-body-content dropzone-click-zone" th:text="#{HQP_T_ITEMS_COPY_PASTE}"></div>
 		</div>
 		<div class="dropzone-bottom dropzone-click-zone">
 			<button type="button" onclick="UploadModal.hide()">[[#{HQP_B_CANCEL}]]</button>
@@ -90,7 +91,7 @@
 			</tr>
 			<tr>
 				<th>
-					<div th:text="#{HQP_L_PO_NO}"></div><img src="/portal/img/icon_required.png" class="required" />
+					<div th:text="#{HQP_L_PO_NO}"></div><img src="/portal/img/icon/required.png" class="required" />
 				</th>
 				<td>
 					<div class="input-area">
@@ -182,6 +183,8 @@
 	$("input:radio[name=docType][value='[[${docType}]]']").prop("checked", true);
 	
 	var errorOrderItems;//시뮬레이션 후 에러 보고를 담아 둠
+	var initialMaterialNos = [];
+	var initialOrderQties = [];	
 	
 	let UploadModal = {};
 	UploadModal.show = function() {
@@ -203,11 +206,43 @@
 		});
 	
 		$(".dropzone-dimmer, .dropzone-area").show();
+		
+		$(document).on("paste", function(event) {
+			triggerPasteFromClipload(event);
+		});
 	};
 	
 	UploadModal.hide = function()
 	{
 		$(".dropzone-dimmer, .dropzone-area").hide();
+		
+		$(document).off("paste");
+	};
+
+	function resetInitialItems()
+	{
+		initialMaterialNos = [];
+		initialOrderQties = [];		
+	};	
+	
+	function triggerPasteFromClipload(event)
+	{
+		resetInitialItems();
+		
+		let rows = event.originalEvent.clipboardData.getData("Text").split(String.fromCharCode(13));//13:CR
+		let items = [];
+		
+		$.each(rows, function(index, element) {
+			let item = element.split(String.fromCharCode(9));//9:tab
+			
+			if (item[0].trim() != null && item[0].trim() != "")
+			{
+				initialMaterialNos.push(JpUtilsString.replaceAll(item[0], String.fromCharCode(13), ""));
+				initialOrderQties.push(JpUtilsString.replaceAll(item[1], String.fromCharCode(13), ""));
+			};
+		});
+		
+		doSimulation();
 	};
 	
 	$(".dropzone-click-zone").dropzone({
@@ -440,28 +475,31 @@
 		//직접 입력한 후 시뮬레이션 했을 경우
 		if ($("#fileName").val() == "" && $("#simulationFrom").val() == "")
 		{
+			if (initialMaterialNos.length == 0)
+			{
+				let itemParameter = makeItemParameter();
+				
+				let materialNos = itemParameter.materialNos;
+				let orderQties = itemParameter.orderQties;
+		
+				if (materialNo.length == 0 || orderQties.length == 0)
+				{
+					alert("[[#{HQP_L_EMPTY_PART_WHEN_ORDERING}]]");
+					return;
+				};
+		
+				if (materialNos.length != orderQties.length)
+				{
+					alert("[[#{HQP_L_EMPTY_PART_WHEN_ORDERING}]]");
+					return;
+				};				
+			};
+			
 			if ($("#shippingCondition").val() == "")
 			{
 				alert("[[#{HQP_L_EMPTY_SHIPPING_INFO}]]");
 				return;
-			};
-			
-			let itemParameter = makeItemParameter();
-	
-			let materialNos = itemParameter.materialNos;
-			let orderQties = itemParameter.orderQties;
-	
-			if (materialNo.length == 0 || orderQties.length == 0)
-			{
-				alert("[[#{HQP_L_EMPTY_PART_WHEN_ORDERING	}]]");
-				return;
-			};
-	
-			if (materialNos.length != orderQties.length)
-			{
-				alert("[[#{HQP_L_EMPTY_PART_WHEN_ORDERING	}]]");
-				return;
-			};
+			};			
 		};
 		
 		//시뮬레이션 실행 내역 초기화
@@ -470,7 +508,7 @@
 		$tableObj.ajax.reload();
 		
 		UploadModal.hide();
-		ProgressBar.show();	
+		ProgressBar.show();
 	};
 	
 	function resetDoneSimulation()
@@ -513,7 +551,6 @@
 	});
 	
 	$("#BTN_addRow").on("click", function() {
-	
 		for (let i=0; i<10; i++)
 		{
 			let lastRow = $tableObj.row(":last").data();
@@ -703,15 +740,12 @@
 		doSimulation();
 	});
 	
-	//화면중 일부 area 를 채우는 그리드 예제. 상위 div #sample-grid-area 영역을 100% 채움.
-	//컬럼 width 자동. scroller 자동.
-	//고정된 맵 데이터 사용. 페이지 생성시 데이터 넘겨서 그리드 만드는 방식
 	$(function(){
 		let tabIndex = 1;
 	
 		$tableObj = $("#TBL_grid").DataTable({
 			select: {
-				selector: "td:not(.noselect)"	// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
+				selector: "td:not(.noselect)"// noselect class 컬럼은 select 하지 않도록 한다. (input과 충돌 발생)
 		    },
 			ordering: true,
 			scrollY: 100,
@@ -719,7 +753,6 @@
 			columns: [
 				{// 컬럼에 checkbox 설정
 					name: "chk",
-					className:"center noselect skip-download",// row selection 기능 막음.
 					orderable: false,// checkbox 는 정렬 불가
 					title:"<input type='checkbox' class='custom-ui check-all' onchange='syncInput(this)' onclick='allChecked(this)'><label></label>",
 					render: function(data, type, row)
@@ -740,10 +773,9 @@
 					title: "[[#{HQP_L_ORDER_PART_NO}]]",				
 					width: 200,
 					orderable: false,
-					className:"center noselect",
 					render: function(data, type, row)
 					{
-						return '<button class="btn-popup" type="button"></button><input type="text" name="materialNo" class="custom-ui" value="' + row.materialNo + '" tabindex="' + tabIndex++ + '" ' + row.disabled + ' onchange="syncInput(this)">';// FixedColumns 사용시엔 syncInput 호출 필요함.
+						return "<button class='btn-popup' type='button'></button><input type='text' name='materialNo' class='custom-ui' value='" + row.materialNo + "' tabindex='" + tabIndex++ + "' " + row.disabled + " onchange='syncInput(this)'>";// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},
 				{name: "supplyMaterialNo", data: "supplyMaterialNo", title: "[[#{HQP_L_SUPPLY_PART_NO}]]", width: 200},//Supply Part No
@@ -753,10 +785,9 @@
 					data: "orderQty",
 					title: "[[#{HQP_L_REQ_QTY}]]",
 					orderable: false,
-					className: "center noselect",
 					render: function(data, type, row)
 					{
-						return '<input type="text" class="custom-ui" name="orderQty" style="width:70px" value="' + row.orderQty + '" tabindex="' + tabIndex++ + '" ' + row.disabled + ' onkeyup="doSimulationByEnter(this)" onchange="syncInput(this)">';// FixedColumns 사용시엔 syncInput 호출 필요함.
+						return "<input type='number' class='custom-ui' name='orderQty' style='width:70px' min='1' value='" + row.orderQty + "' tabindex='" + tabIndex++ + "' " + row.disabled + " onkeyup='doSimulationByEnter(this)' onchange='syncInput(this)'>";// FixedColumns 사용시엔 syncInput 호출 필요함.
 					}
 				},//Req Qty
 				{name: "lotQty", data: "lotQty", title: "[[#{HQP_L_SALES_LOT}]]"},//Sales Lot
@@ -767,6 +798,11 @@
 				{name: "netValue", data: "netValue", title: "[[#{HQP_L_NET_VALUE}]]"},//Net Value
 				{name: "availability", data: "availability", title: "[[#{HQP_L_AVAILABILITY}]]"},//Availability
 			],
+			columnDefs: [
+				{targets: [0], className: "skip-download dt-body-center"},
+				{targets: [1, 5, 6, 7, 8, 12], className: "dt-body-center"},
+				{targets: [10, 11], className: "dt-body-right"}
+			],				
 			ajax: {
 				url: "[[${BASE_PATH}]]/order/create/simulation",
 				type: "POST",
@@ -793,10 +829,20 @@
 					//Item
 					if ($("#fileName").val() == "")
 					{
-						let itemParameter = makeItemParameter();
-						
-						p.materialNo = itemParameter.materialNos.join("^");
-						p.orderQty = itemParameter.orderQties.join("^");
+						if (initialMaterialNos.length > 0)
+						{
+							p.materialNo = initialMaterialNos.join("^");
+							p.orderQty = initialOrderQties.join("^");
+							
+							resetInitialItems();
+						}
+						else
+						{
+							let itemParameter = makeItemParameter();
+							
+							p.materialNo = itemParameter.materialNos.join("^");
+							p.orderQty = itemParameter.orderQties.join("^");
+						};
 					}
 					else
 					{
@@ -873,31 +919,27 @@
 				}				
 			}			
 		});
-		
+
 		function reload()
 		{
 			$("#fileName").val("");
 			$tableObj.ajax.reload();
-		};		
-		
-		// Datatable grid 초기 설정 셋업
-		initGridTable($tableObj);
+		};
 		
 		// Datatable onload event
 		$("#TBL_grid").on("draw.dt", function () {
 			$("#fileName").val("");
 			$("#simulationFrom").val("");
 			
-			// Datatable grid 초기 설정 셋업
-			//initGridTable($tableObj, true);
-			
-			$("#AREA_grid .btn-popup").on("click", function(event) {
+			$("#TBL_grid .btn-popup").on("click", function(event) {
 				_showPartSearch($(this).siblings("input[name=materialNo]").val());
 			});
 			
-			$.each($("#AREA_grid input[name=materialNo]"), function(index, item) {
+			$.each($("#TBL_grid input[name=materialNo]"), function(index, item) {
 				_setPartAutocomplete(item);	
 			});
+			
+			initGridTable($tableObj);
 	
 			ProgressBar.hide();
 		});
