--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write2.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/domestic/order/create/write2.html
@@ -241,7 +241,7 @@
 		
 		$(".dropzone-dimmer").css({
 			"width": "100%",
-			"height": $(document).height()
+			"height": "100%"
 		});
 	
 		$(".dropzone-dimmer, .dropzone-area").show();
