DIVK 부품오더링개발

--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/credentials/policy/write.html
@@ -27,7 +27,7 @@
 		<textarea name="description" th:text="${credentialsPolicy.description}" rows="3"></textarea>
 	</div>
 	<div class="field">
-		<label>Password Valid Period</label>
+		<label>Password Valid Period (Days)</label>
 		<input type="number" name="pwdValidPeriod" min="0" oninput="validity.valid||(value='');" th:value="${credentialsPolicy.pwdValidPeriod}" placeholder="Days"/>
 	</div>	
 	<div class="field">
