--- a/jwebppy/src/main/resources/templates/error.html
+++ b/jwebppy/src/main/resources/templates/error.html
@@ -45,7 +45,7 @@
 	</style>		
 </head>
 <body>
-<div class="header">
+<div class="top-header">
 	<div class="logo-area">
 		<img class="logo-doosan" th:src="@{/portal/img/logo/logo2.png}" alt="DOOSAN" /><img class="logo-doobizplus" th:src="@{/portal/img/logo/doobizplus.png}" alt="DOOBIZ Plus" />
 	</div>	
