--- a/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/bottom.html
+++ b/jwebppy/src/main/resources/templates/platform/layout/popup/fragments/bottom.html
@@ -102,7 +102,7 @@ function _showUserkey)
 };
  
 //User Group
-function _showUserGroupkey)
+function _showUserGroup(key)
 {
 	JpUiPopup.open({
 		url: "/platform/mgmt/user/user_group/view?ugSeq=" + JpUtilsString.trimToEmpty(key)
