--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/list.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/list.html
@@ -58,7 +58,7 @@ $(document).ready(function() {
 				
 				if (columnIndex == 1)
 				{
-					_showUserGroupkey);
+					_showUserGroup(key);
 				}
 				else if (columnIndex == 8)
 				{
