--- a/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/write.html
+++ b/jwebppy/src/main/resources/templates/platform/mgmt/user/user_group/write.html
@@ -105,6 +105,15 @@ $(document).ready(function() {
 							}
 						]
 					},
+					"Currency Format": {
+						identifier: "currencyFormat",
+						rules: [
+							{
+								type: "empty",
+								prompt: "Please input {name}."
+							}
+						]
+					},					
 					Country: {
 						identifier: "country",
 						rules: [
