--- a/jwebppy/src/main/resources/templates/portal/iv/hq/parts/export/main.html
+++ b/jwebppy/src/main/resources/templates/portal/iv/hq/parts/export/main.html
@@ -11,22 +11,10 @@
 	<!-- CSS -->
 	<link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/main.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/portal/css/layout/iv/hq/parts/gnb.css}">
-	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fomantic-ui/2.8.8/semantic.min.css"/>
+
 	<!-- JavaScript -->
-	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
-	
-	<!-- custom javascript library -->
-	<script th:src="@{/portal/js/jWebppy.utils.object.js}"></script>
-	<script th:src="@{/portal/js/jWebppy.utils.string.js}"></script>
-	<script th:src="@{/portal/js/jWebppy.utils.number.js}"></script>
-	<script th:src="@{/portal/js/jWebppy.utils.security.js}"></script>
-	<script th:src="@{/portal/js/jWebppy.utils.path.js}"></script>
-	<script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
-	<script th:src="@{/portal/js/jWebppy.ui.popup.js}"></script>
-	<script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
-	<script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
+	<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/js"></th:block>
 </head>
 <body>
 	<!-- Progress bar end -->
@@ -47,7 +35,7 @@
 			</div>
 			<!-- header.jsp begin -->
 			<div class="gnb-area">
-				<div class="header">
+				<div class="top-header">
 					<div class="logo-area">
 						<img class="logo-doosan" th:src="@{/portal/img/logo/logo2.png}" /><img class="logo-doobizplus" th:src="@{/portal/img/logo/doobizplus.png}" alt="DOOBIZ Plus" />
 					</div>
