--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/fragments/js.html
@@ -18,12 +18,13 @@
 <script th:src="@{/portal/js/jWebppy.utils.form.js}"></script>
 <script th:src="@{/portal/js/jWebppy.utils.ajax.js}"></script>
 <script th:src="@{/portal/js/jWebppy.ui.popup.js}"></script>
-<script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
+<script th:src="@{/portal/js/jWebppy.ui.dimmer.js}"></script>
 <script th:src="@{/portal/js/portal.utils.progressbar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.grid.download.js}"></script>
 <script th:src="@{/portal/js/portal.utils.modal.js}"></script>
-<script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
+<script th:src="@{/portal/js/portal.utils.calendar.js}"></script>
 <script th:src="@{/portal/js/portal.utils.order.js}"></script>
 <script th:src="@{/portal/js/datatables/jqueryDefault.js}"></script>
+<script th:src="@{/portal/js/datatables/dataTablesDefault.js}"></script>
 <script th:src="@{/portal/js/portal.ui.gnb.js}"></script>
 <script th:src="@{/portal/js/portal.utils.download.js}"></script>
