--- a/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
+++ b/jwebppy/src/main/resources/templates/portal/layout/iv/hq/parts/common/index.html
@@ -5,6 +5,13 @@
 	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
 	xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+	<script>
+	const GLOBAL_CONST = {
+		"DATE_FORMAT": "[[${DATE_FORMAT}]]",
+		"TIME_FORMAT": "[[${TIME_FORMAT}]]"
+	};
+	</script>
+
 	<title th:text="#{PTL_T_DOOBIZ_PLUS}"></title>
 	<!-- Meta -->
 	<th:block th:replace="portal/layout/iv/hq/parts/common/fragments/meta"></th:block>
