--- a/jwebppy/src/main/resources/templates/portal/common/authentication/login.html
+++ b/jwebppy/src/main/resources/templates/portal/common/authentication/login.html
@@ -185,7 +185,7 @@ $(document).ready(function() {
 		<img class="logo" th:src="@{/portal/img/logo/logo2.png}" alt="DOOSAN" /><img id="IMG_doobizPlus" class="doobizplus" th:src="@{/portal/img/logo/doobizplus.png}" alt="DOOBIZ Plus"/>
 		<div id="openNewWindow" class="button" th:text="#{PTL_T_NEW_WINDOW}"></div>
 	</div>
-	<div id="body" class="body">
+	<div class="body">
 		<div><img id="mainImg" th:src="@{/portal/img/login/main.png}" alt="Main Image" /></div>
 		<div class="login-box">
 			<div class="title" th:text="#{PTL_T_FORM_LOGIN}"></div>
