--- a/jwebppy/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
+++ b/jwebppy/src/main/resources/static/portal/css/layout/iv/hq/parts/main.css
@@ -300,15 +300,15 @@ input {
 	height: calc(100vh - 70px);
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (max-width: 1280px) {
 	body {
-		width: 1300px;
-		/*height: 700px;*/
-		overflow-x: scroll;
+		width: 1280px;
+		height: 720px;
+		overflow: hidden;
 	}
 	
 	.intro-area {
-		width: (100vw - 251px);
+		width: 100vw;
 		position: absolute;
 		left: 251px;	
 		top: 167px;
@@ -345,10 +345,10 @@ input {
 	}
 	
 	.bulletin-area {
-		position: absolute;
-		width: 100%;
+		position: relative;
+		width: 1280px;
 	 	height:134px;
-	 	top: calc(100vh - 144px);
+	 	top: 445px;
 	 	left: 50%;
 	    transform: translate(-50%,-50%);
 	}
@@ -361,7 +361,7 @@ input {
 	}
 	
 	.bulletin-1 {	
-		width: 500px;
+		width: 380px;
 		height: 130px;
 		background-color: #ffffff;
 		padding-left:40px;
@@ -371,7 +371,7 @@ input {
 	}
 	
 	.bulletin-2 {	
-		width: 500px;
+		width: 380px;
 		height: 130px;
 		background-color: #ffffff;
 		padding-left:40px;
@@ -393,14 +393,10 @@ input {
 	}
 	
 	.bottom-area {
-		/*
-		position: absolute;
-		top: calc(100vh - 70px);
-		*/
-		height: 70px;
-		position: fixed;
-		bottom: 0;
-		width:100%;
+		position: relative;
+		height: 70px;		
+		top: 650px;
+		width:1280px;
 		border: none;
 		margin: 0;
 		background-color: #fff;
@@ -418,7 +414,7 @@ input {
 	}
 }
 
-@media screen and (min-width: 1301px) {
+@media screen and (min-width: 1281px) {
 	body {
 		width: 100%;
 		height: 100%;
